--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -34,7 +34,7 @@
     <% unless post.pictures.empty? %>
     <% post.pictures.each do |pic| %>
     <div class="col s6">
-      <img src="<%= pic.image.url %>" class="responsive-img"/>
+      <%= image_tag(pic.image, class:"responsive-img", lazy: true) %>
     </div>
     <% end %>
     <% end %>
@@ -58,6 +58,10 @@
 
 
   <script>
+  $("img.lazy").lazyload({
+    effect : "fadeIn"
+  });
+
     $('.modal-trigger').leanModal({
     dismissible: true, // Modal can be dismissed by clicking outside of the modal
     opacity: .5, // Opacity of modal background
