--- a/app/views/menus/_profiles.erb
+++ b/app/views/menus/_profiles.erb
@@ -1,7 +1,7 @@
 <div class="container row">
     <% if @profiles.present? %>
     <% @profiles.each do |profile| %>
-    <div class="col s12 l4">
+    <div class="col s12 l4 m4">
         <div class="card row z-depth-1">
             <div class="col s5">
                 <%= link_to image_tag(profile.avatar(), class:"circle responsive-img"), profile %>
@@ -12,7 +12,7 @@
                 <div class="star-rating" data-score=<%= profile.reviews.average(:rating) %>></div>
                 <em><%= "#{profile.reviews.length} valoraciones" %></em><br>
                 <p>
-                    <%= profile.body  %><br>
+                    <%= truncate(profile.body) %><br>
                     <b>Dirección:
                     </b><%= profile.direccion %>
                 </p>
