--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -12,21 +12,12 @@
         <ul class="collection z-depth-1">
             <% @markets.each do |market| %>
             <a href="<%= market_path(market) %>" class="collection-item  blue-grey-text darken-4">
-                <i class="material-icons">
-                    <%= market.icon %>
-                </i>
+                    <%= icon(market.icon,style:'font-size:2rem;') %>
                 <%= market.title %>
             </a>
             <% end %>
         </ul>
 
-        <% if master_admin_signed_in? %>
-        <div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 45px; right: 24px;">
-            <a href="<%= new_market_path %>" class="btn-floating waves-effect btn-large red">
-                <i class="material-icons">add</i>
-            </a>
-        </div>
-        <% end %>
     </div>
 </div>
 
