--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="row right">
     <%= button_tag(type: 'submit', id:"btn-post", remote: true, class: "btn blue") do %>
-     <i class="material-icons">check_circle</i>
+      <%= icon("check") %>
     <% end %>
 
     <a href="#!" class=" modal-action modal-close btn red"><i class="material-icons">cancel</i></a>
