--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -8,7 +8,7 @@
 
     <li>
         <div class="collapsible-header">
-            <i class="material-icons">business</i>
+            <%= icon("briefcase") %>
             Categoría
         </div>
         <div class="collapsible-body" style="background:white;">
@@ -27,8 +27,8 @@
 
     <li>
         <div class="collapsible-header">
-            <i class="material-icons">text_fields</i>
-            Titulo
+          <%= icon("pencil") %>
+            Nombre de la Empresa o Negocio.
         </div>
         <div class="collapsible-body" style="background:white;">
             <p class="field">
@@ -40,7 +40,7 @@
 
     <li>
         <div class="collapsible-header">
-            <i class="material-icons">sort</i>
+          <%= icon("align-left") %>
             Descripcion
         </div>
         <div class="collapsible-body" style="background:white;">
@@ -53,7 +53,7 @@
 
     <li>
         <div class="collapsible-header">
-            <i class="material-icons">menu</i>
+            <%= icon("bars") %>
             Sección de Ofertas
         </div>
         <div class="collapsible-body" style="background:white;">
@@ -68,7 +68,7 @@
 
     <li>
         <div class="collapsible-header">
-            <i class="material-icons">directions</i>
+            <%= icon("map-marker") %>
             Dirección</div>
         <div class="collapsible-body" style="background:white;">
             <p class="field">
@@ -80,7 +80,7 @@
 
     <li>
         <div class="collapsible-header">
-            <i class="material-icons">face</i>
+            <%= icon("file-image-o") %>
             Imagen de Perfil
         </div>
         <div class="collapsible-body" style="background:white;">
@@ -104,7 +104,7 @@
 
     <li>
         <div class="collapsible-header">
-            <i class="material-icons">add_a_photo</i>
+          <%= icon("picture-o") %>
             Imagen de portada
         </div>
         <div class="collapsible-body" style="background:white;">
