--- a/app/views/profiles/_post_frame.html.erb
+++ b/app/views/profiles/_post_frame.html.erb
@@ -50,11 +50,11 @@
           <% end %>
         <div class="col s4 center">
           <%= link_to post do %>
-            <i class="material-icons like-text" style="font-size:2.5rem">forum</i>
+            <%= icon('comments',style:'font-size:2.5rem;') %>
           <% end %>
         </div>
         <div class="col s4 center">
-          <i class="material-icons like-text" style="font-size:2.5rem">share</i>
+          <%= icon('share-alt',style:'font-size:2.5rem;') %>
         </div>
       </div>
 
