--- a/app/views/clientprofiles/_form.html.erb
+++ b/app/views/clientprofiles/_form.html.erb
@@ -36,7 +36,7 @@
 
         <%= button_tag(type: 'submit', class: "btn blue") do %>
         Listo!
-        <i class="material-icons">check_circle</i>
+        <%= icon("check") %>
         <% end %>
 
     </div>
