--- a/app/views/markets/edit.html.erb
+++ b/app/views/markets/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing Market</h1>
 
-<%= render 'form' %>
+<div class="container">
+  <%= render 'form' %>
+</div>
 
 <%= link_to 'Show', @market %> |
 <%= link_to 'Back', markets_path %>
