--- a/app/views/menus/admin_panel/_categories.html.erb
+++ b/app/views/menus/admin_panel/_categories.html.erb
@@ -10,8 +10,8 @@
 		<% categories.each do |category| %>
 		<tr>
 			<td> <%= category.name %> </td>
-			<td> <i class="material-icons"><%= category.icon %></i> </td>
-			<td> <%= link_to "Editar",[:edit, category], class:"btn gree" %> 
+			<td> <%= icon(category.icon,style:'font-size:2rem;') %> </td>
+			<td> <%= link_to "Editar",[:edit, category], class:"btn gree" %>
 				<%= link_to 'Eliminar', category,
 				data: {confirm: '¿Estas Seguro?'}, method: :delete, remote: true, class:"btn red", id:"btn-delete" %>
 			</td>
