--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <h5>Registrarse</h5>
 <% if session_path(resource) == "/users/sign_in" %>
     <p>
-      <i class="material-icons">warning</i> Crea una cuenta para tu negocio o empresa y muestra tus productos o
+      <%= icon("exclamation-triangle") %> Crea una cuenta para tu negocio o empresa y muestra tus productos o
       servicios a los usuarios de <b>Estelí Live</b>
     </p>
   <% end %>
