--- a/app/views/event_comments/_form.html.erb
+++ b/app/views/event_comments/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="col s2">
     <%= button_tag(type: 'submit', class: "btn-large green") do %>
-     <i class="material-icons">send</i>
+     <%= icon("paper-plane") %>
     <% end %>
   </div>
 </div>
