--- a/app/views/welcome/_posts.html.erb
+++ b/app/views/welcome/_posts.html.erb
@@ -20,7 +20,7 @@
             <% end %>
 
             <%= link_to edit_post_path(post), class:"right" do%>
-              <i class="material-icons">mode_edit</i>
+              <%= icon("pencil-square-o") %>
             <% end %>
           <% end %>
       <% end %>
