--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -43,7 +43,7 @@
 <b>Imagen</b>
     <div class="file-field input-field">
       <div class="btn red">
-        <i class="material-icons">photo</i>
+      <%= icon("picture-o") %>
         <input type="file">
         <%= f.file_field :image, input_html: { hidden: true }%>
       </div>
@@ -54,10 +54,10 @@
 
     <div class="row right">
       <%= button_tag(type: 'submit', id:"btn-post", remote: true, class: "btn blue") do %>
-       <i class="material-icons">check_circle</i>
+       <%= icon("check") %>
       <% end %>
 
-      <a href="#!" class=" modal-action modal-close btn red"><i class="material-icons">cancel</i></a>
+      <a href="#!" class=" modal-action modal-close btn red"><%= icon("ban") %></a>
 
     </div>
 
