--- a/app/views/offers/_offerts.html.erb
+++ b/app/views/offers/_offerts.html.erb
@@ -1,7 +1,7 @@
 <h5><%= @profile.offer_section_name %></h5>
 
 <% if editable?(@profile) %>
-  <i class="material-icons">mode_edit</i>
+  <%= icon("pencil-square-o") %>
 <% end %>
   <% @offers.each do  |offer | %>
       <div  class="card row z-depth-1">
