fix missing edit icon

--- a/app/views/panels/index.html.erb
+++ b/app/views/panels/index.html.erb
@@ -19,7 +19,7 @@
 
   <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <a href="panels/new" class="btn-floating btn-large red">
-      <i class="large material-icons">mode_edit</i>
+      <%= icon('pencil') %>
     </a>
   </div>
 
