--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -42,7 +42,7 @@
 <div class="z-depth-1">
   <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <a href="#modal1" class="modal-trigger btn-floating btn-large red">
-      <i class="large material-icons">mode_edit</i>
+      <%= icon('pencil') %>
 
     </a>
   </div>
