--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -23,6 +23,6 @@
 
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <%= link_to new_item_path, class:"btn-floating btn-large red" do%>
-    <i class="large material-icons">mode_edit</i>
+    <%= icon('pencil') %>
     <% end %>
 </div>
