revert a bunch of errors

--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -16,7 +16,7 @@
         <%= link_to "editar", edit_profile_review_path(@profile,rev) %>
       <% end %>
       <% elsif  client_signed_in? %>
-      <a class="modal-trigger btn-floating blue right" href="#review-modal"><%= icon("star") %></a>
+      <a class="modal-trigger btn-floating blue right" href="#review-modal"><%= icon('star') %></a>
 
     <% end %>
 
