--- a/app/views/follows/_followbtn.html.erb
+++ b/app/views/follows/_followbtn.html.erb
@@ -1,12 +1,12 @@
 <% if client_signed_in? %>
   <% if current_client.follow?(@profile) %>
     <%= button_to unfollow_path(profile_id: profile.id), remote: true,id:"follow", class:"btn small green", method: :delete do%>
-      <i class="material-icons left">star</i>
+      <%= icon("star") %>
       Siguiendo
     <% end %>
   <% else %>
     <%= button_to follow_path(profile_id: profile.id), class:"btn small grey", remote: true, id:"follow" do %>
-      <i class="material-icons left">favorite</i>
+      <%= icon("heart") %>
       Seguir
       <% end %>
   <% end %>
