--- a/app/views/menus/search.html.erb
+++ b/app/views/menus/search.html.erb
@@ -1,8 +1,3 @@
-<script>
-  $(document).ready(function(){
-  $('ul.tabs').tabs();
-  });
-</script>
 <ul class="tabs">
   <li class="tab col s3"><a href="#profiles">Perfiles</a></li>
   <li class="tab col s3"><a href="#offers">Ofertas</a></li>
@@ -19,7 +14,7 @@
             </p>
             <%= text_field_tag :query, params[:query], placeholder: "Buscar...",class:"grey-text darken-4", style:"max-width: 100%;" %>
               <%= button_tag(type: 'submit', class: "btn-large green right") do %>
-                Buscar<i class="material-icons left">send</i>
+                Buscar <%= icon("paper-plane") %>
               <% end %>
           <% end %>
         </div>
@@ -32,7 +27,7 @@
               </p>
               <%= text_field_tag :query, params[:query], placeholder: "Buscar ejem:'Comida C$200'",class:"grey-text darken-4", style:"max-width: 100%;" %>
                 <%= button_tag(type: 'submit', class: "btn-large green right") do %>
-                  <i class="material-icons left">send</i>Buscar
+                  <%= icon("paper-plane") %>Buscar
                 <% end %>
             <% end %>
           </div>
