add lazy method to all app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,10 @@ height: 100%;
 
   <div id="fb-root"></div>
 <script>
+$("img.lazy").lazyload({
+  effect : "fadeIn"
+});
+
 $( document ).ready(function() {
 
   // hide spinner
