--- a/app/views/releases/edit.html.erb
+++ b/app/views/releases/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Release</h1>
+<div class="container">
+  <h1>Editing Release</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @release %> |
-<%= link_to 'Back', releases_path %>
+  <%= link_to 'Show', @release %> |
+  <%= link_to 'Back', releases_path %>
+
+</div>
