--- a/app/views/releases/new.html.erb
+++ b/app/views/releases/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Release</h1>
+<div class="container">
+  <h1>New Release</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', releases_path %>
+  <%= link_to 'Back', releases_path %>
+
+</div>
