add link to releases

--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -123,3 +123,9 @@
 
 	<% end %>
 </ul>
+<div class="center info-box">
+	Descarga la App <br>
+	<%= link_to releases_path, class:"btn-large green" do %>
+		<%= icon('download') %>
+	<% end %>
+</div>
